
Changes from grid_3.5.* to grid_3.6.0:
-------------------------------------

1.  New functions deviceLoc() and deviceDim().

2.  Improve handling of graphics devices in grid.grabExpr().
    Should now work when multiple graphics devices already open
    (e.g., within 'knitr' document).

3.  Fix bug in grid.layout() when viewport has negative width/height
    (e.g., due to being sized in "native" units within viewport
     with flipped scales).

    Thanks to report by Silas Dean.

4.  Add 'wrap.grob' argument to grid.grab() and grid.grabExpr()
    to allow wrapping of grobs as well as viewports (if both
    'wrap' and 'wrap.grob' are TRUE.

    Also, no longer check for duplicate grob names at top-level
    if 'wrap' is TRUE.

    Also, do not start new page if 'wrap' is TRUE.

    Thanks to report from John Bullock.

5.  Exported makeContent.default() (so that
    external packages can do more stuff with grobs)

6.  New 'pathId' and 'pathId.lengths' arguments for grid.path()
    to allow multiple paths to be drawn at once.

    Contributed by Thomas Lin Pedersen.

7.  New grobCoords() and grobPoints() functions to calculate points 
    along the perimeter (or length) of a grob.

8.  Internal changes to graphical parameter setting to speed things
    up a bit.  
    
    Contributed by Thomas Lin Pedersen.


Changes from grid_3.4.* to grid_3.5.0:
-------------------------------------

1.  Fix for current.vpTree() so that it puts you back in the right
    place in the viewport tree if there are nested viewports with
    the same name (e.g., pushViewport(vp, vp)).

    Reported by Prem Thomas.

2.  Added 'device' (and 'width' and 'height') arguments to grid.grabExpr()

    Suggestion from Claus Wilke.


Changes from grid_3.3.* to grid_3.4.0:
-------------------------------------

1.  Added format() method for units, so, for example, the number of 
    digits printed for numeric values can be controlled.
