@@ -1,4 +1,16 @@
 
+Changes from grid_3.6.* to grid_3.7.0:
+-------------------------------------
+
+1.  upViewport() or popViewport() now correctly reverts to previous
+    gpar() settings.  
+
+    It used to always revert to previous viewport gpar() settings, 
+    but that is wrong if we are coming out of a viewport that 
+    is a 'childrenvp' of a gTree and the gTree has gpar() settings
+    (in that case we should revert to the gTree gpar() settings).
+
+
 Changes from grid_3.5.* to grid_3.6.0:
 -------------------------------------
 
